feat(pod):add regex support for pod name

--- a/release/logging-filebeat.yaml
+++ b/release/logging-filebeat.yaml
@@ -60,6 +60,7 @@ _config:
       - "--logLevel=info"
       - "-e"
       - "--namespace.blacklist=default,kube-system"
+      - "--pod.whiteRegex=^kube-system/(lb-.+|apiserver-proxy-nginx-preset-.+)$"
       env: 
       - name: OUTPUT_CONFIG
         from:
